Bug 143240 - Scrolling to show new mail only works when mails are sorted bottom up
Summary: Scrolling to show new mail only works when mails are sorted bottom up
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: 1.9.6
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
: 135754 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-03-19 22:08 UTC by Tobias
Modified: 2009-06-06 05:02 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias 2007-03-19 22:08:40 UTC
Version:           1.9.6 (using KDE 3.5.6, Kubuntu (edgy) 4:3.5.6-0ubuntu1~edgy1)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.17-10-generic

When I have the newest mails on top and the mail list is scrolled to the top it scrolls up when a new mail arrives, i.e. the new mail comes into view. However this doesn't work the same way when I have newest mails at the bottom and the message list is scrolled to the bottom. This isn't very intuitive and since I'm used to have new mails at the bottom it would be nice if this could be fixed.

Steps to reproduce:

- Sort mails by date top down
- Scroll message list all the way down to the newest mail
- Receive new mails -> they are not shown but you have to scroll down to see them
Comment 1 Thomas McGuire 2007-03-20 15:09:26 UTC
*** Bug 135754 has been marked as a duplicate of this bug. ***
Comment 2 Martin van Es 2008-12-11 14:47:26 UTC
This wish is still valid for KDE 4.1.80 (and thus 4.2) and it's also true for a messagelist that is sorted by date top up.
Comment 3 Thorsten Mühlfelder 2009-02-05 11:23:07 UTC
I'm using settings:
Aggregation = Standard Mailing List
Sort order = Least recent on top.

At new Mail Arrival it doesn't automatically scroll down so that the new mail 
can be seen. I have to do it by hand, what is a bit annoying.
Comment 4 Andrew Malcolm 2009-06-04 08:53:34 UTC
*** This bug has been confirmed by popular vote. ***
Comment 5 Szymon Stefanek 2009-06-06 05:02:01 UTC
SVN commit 978098 by stefanek:

Auto-scroll the view to show newly arrived messages.
(but only when not in the first load, sorted
by date and "locked" to top or bottom of the view)


BUG: 143240



 M  +60 -7     model.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=978098