Auto-scroll the view to show newly arrived messages. (but only when not in the first load, sorted by date and "locked" to top or bottom of the view)

BUG: 143240


svn path=/trunk/KDE/kdepim/; revision=978098